--- a/XinjingdailyBot/Localization/Emoji.resx
+++ b/XinjingdailyBot/Localization/Emoji.resx
@@ -117,7 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ConfigFileName" xml:space="preserve">
-    <value>config.json</value>
+  <data name="Back" xml:space="preserve">
+    <value>↩️</value>
+  </data>
+  <data name="Blue" xml:space="preserve">
+    <value>🔷</value>
+  </data>
+  <data name="Ghost" xml:space="preserve">
+    <value>👻</value>
+  </data>
+  <data name="No" xml:space="preserve">
+    <value>❌</value>
+  </data>
+  <data name="Orange" xml:space="preserve">
+    <value>🔶</value>
+  </data>
+  <data name="Thinking" xml:space="preserve">
+    <value>🤔</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>✅</value>
   </data>
 </root>
