新增复读禁言

--- a/XinjingdailyBot/Localization/Emojis.resx
+++ b/XinjingdailyBot/Localization/Emojis.resx
@@ -126,6 +126,9 @@
   <data name="Ghost" xml:space="preserve">
     <value>👻</value>
   </data>
+  <data name="Horse" xml:space="preserve">
+    <value>🐴</value>
+  </data>
   <data name="No" xml:space="preserve">
     <value>❌</value>
   </data>
