--- a/XinjingdailyBot/Localization/Langs.resx
+++ b/XinjingdailyBot/Localization/Langs.resx
@@ -129,4 +129,22 @@
   <data name="WarnUserTips" xml:space="preserve">
     <value>您受到了一次警告, 理由: {0}\n当前累计受到警告&lt;code&gt;{1}&lt;/code&gt;次, 达到&lt;code&gt;{2}&lt;/code&gt;次后将会被系统自动封禁</value>
   </data>
+  <data name="NoPostRight" xml:space="preserve">
+    <value>没有权限</value>
+  </data>
+  <data name="ReviewGroupNotSet" xml:space="preserve">
+    <value>尚未设置审核群组, 无法接收投稿</value>
+  </data>
+  <data name="TextPostCantBeNull" xml:space="preserve">
+    <value>文本为空, 无法创建投稿</value>
+  </data>
+  <data name="PostSendSuccess" xml:space="preserve">
+    <value>稿件已成功投递</value>
+  </data>
+  <data name="ThanksForSendingPost" xml:space="preserve">
+    <value>感谢您的投稿, 审核结果将会稍后通知</value>
+  </data>
+  <data name="PostCanceled" xml:space="preserve">
+    <value>投稿已取消</value>
+  </data>
 </root>
