--- a/XinjingdailyBot.Infrastructure/Localization/Emojis.resx
+++ b/XinjingdailyBot.Infrastructure/Localization/Emojis.resx
@@ -136,7 +136,7 @@
     <value>🔶</value>
   </data>
   <data name="PureStrings" xml:space="preserve">
-    <value>🏳️‍⚧️|🇺🇦</value>
+    <value>🏳️‍⚧️|🇺🇦|🇹🇼</value>
   </data>
   <data name="SpoilerOff" xml:space="preserve">
     <value>🖼️</value>
