--- a/XinjingdailyBot.Infrastructure/Localization/Langs.resx
+++ b/XinjingdailyBot.Infrastructure/Localization/Langs.resx
@@ -234,4 +234,7 @@
   <data name="Version" xml:space="preserve">
     <value>Version: {0} - {1}</value>
   </data>
+  <data name="ReviewPlan" xml:space="preserve">
+    <value>⏲️延时</value>
+  </data>
 </root>
