--- a/XinjingdailyBot.Infrastructure/Localization/Langs.resx
+++ b/XinjingdailyBot.Infrastructure/Localization/Langs.resx
@@ -235,6 +235,12 @@
     <value>Version: {0} - {1}</value>
   </data>
   <data name="ReviewPlan" xml:space="preserve">
-    <value>✅二频道</value>
+    <value>⏳延时</value>
+  </data>
+  <data name="ReviewAcceptSecond" xml:space="preserve">
+    <value>✅二频</value>
+  </data>
+  <data name="ReviewAcceptSecondFull" xml:space="preserve">
+    <value>✅第二频道采用</value>
   </data>
 </root>
