--- a/XinjingdailyBot.Generator/Templates.resx
+++ b/XinjingdailyBot.Generator/Templates.resx
@@ -150,30 +150,74 @@ public static class GeneratedAppServiceExtensions
     {</value>
     <comment>服务注册文件头</comment>
   </data>
-  <data name="JobContent" xml:space="preserve">
-    <value>try
-{{
-    const string group = "DEFAULT";
-    var jobKey = new JobKey("{0}", group);
-    var tiggerKey = new TriggerKey("{0}-Tigger", group);
-    var schedule = cron.GetValueOrDefault("{0}", "{1}");
+  <data name="DbTableContent" xml:space="preserve">
+    <value>_logger.LogInformation("开始创建 {0} 表");
+_dbClient.CodeFirst.InitTables&lt;{1}&gt;();</value>
+    <comment>数据库文件内容</comment>
+  </data>
+  <data name="DbTableFooter" xml:space="preserve">
+    <value>_logger.LogWarning("数据库结构生成完毕, 建议禁用 Database.Generate 来加快启动速度");
+        }
 
-    qz.AddJob&lt;{2}&gt;(jobKey, opts =&gt; opts.WithIdentity(jobKey));
-    qz.AddTrigger(opts =&gt; opts
-        .ForJob(jobKey)
-        .WithIdentity(tiggerKey)
-        .WithCronSchedule("{1}")
-    );
+        return Task.CompletedTask;
+    }
 
-    _logger.Debug("{1} - {0} 注册成功");
-}}
-catch (Exception ex)
-{{
-    _logger.Error(ex, "{1} - {0} 注册失败");
-}}</value>
+    /// &lt;summary&gt;
+    /// 销毁
+    /// &lt;/summary&gt;
+    public override void Dispose()
+    {
+        GC.SuppressFinalize(this);
+    }
+}</value>
+    <comment>数据库文件尾</comment>
+  </data>
+  <data name="DbTableHeader" xml:space="preserve">
+    <value>using Microsoft.Extensions.Hosting;
+using Microsoft.Extensions.Logging;
+using Microsoft.Extensions.Options;
+using SqlSugar;
+using XinjingdailyBot.Infrastructure;
+
+namespace XinjingdailyBot.WebAPI.Extensions;
+
+/// &lt;summary&gt;
+/// 消息接收服务
+/// &lt;/summary&gt;
+public sealed class GeneratedDbInitService(
+        ILogger&lt;GeneratedDbInitService&gt; _logger,
+        IOptions&lt;OptionsSetting&gt; _options,
+        ISqlSugarClient _dbClient) : BackgroundService
+{
+    /// &lt;summary&gt;
+    /// 执行
+    /// &lt;/summary&gt;
+    /// &lt;param name="cancellationToken"&gt;&lt;/param&gt;
+    /// &lt;returns&gt;&lt;/returns&gt;
+    protected override Task ExecuteAsync(CancellationToken cancellationToken)
+    {
+        var dbCotion = _options.Value.Database;
+        if (dbCotion.Generate)
+        {
+            _logger.LogInformation("开始生成数据库结构");
+            //创建数据库
+            try
+            {
+                _dbClient.DbMaintenance.CreateDatabase(dbCotion.DbName);
+            }
+            catch (Exception ex)
+            {
+                _logger.LogWarning(ex, "创建数据库失败, 可能没有权限");
+            }
+
+            //创建数据表</value>
+    <comment>数据库文件头</comment>
+  </data>
+  <data name="ScheduleContent" xml:space="preserve">
+    <value>qz.RegisterNewJob&lt;{2}&gt;("{0}", "{1}", cron);</value>
     <comment>定时任务文件内容</comment>
   </data>
-  <data name="JobFooter" xml:space="preserve">
+  <data name="ScheduleFooter" xml:space="preserve">
     <value>});
 
         services.AddQuartzServer(op =&gt; {
@@ -182,10 +226,43 @@ catch (Exception ex)
             op.WaitForJobsToComplete = true;
         });
     }
+
+    private const string DefaultGroupName = "DEFAULT";
+
+    /// &lt;summary&gt;
+    /// 注册定时任务
+    /// &lt;/summary&gt;
+    /// &lt;typeparam name="T"&gt;&lt;/typeparam&gt;
+    /// &lt;param name="qz"&gt;&lt;/param&gt;
+    /// &lt;param name="jobName"&gt;&lt;/param&gt;
+    /// &lt;param name="defSchedule"&gt;&lt;/param&gt;
+    /// &lt;param name="cron"&gt;&lt;/param&gt;
+    private static void RegisterNewJob&lt;T&gt;(this IServiceCollectionQuartzConfigurator qz, string jobName, string defSchedule, Dictionary&lt;string, string&gt; cron) where T : IJob
+    {
+        var jobKey = new JobKey(jobName, DefaultGroupName);
+        var tiggerKey = new TriggerKey($"{jobName}-Tigger", DefaultGroupName);
+        var schedule = cron.GetValueOrDefault(jobName, defSchedule);
+
+        try
+        {
+            qz.AddJob&lt;T&gt;(jobKey, opts =&gt; opts.WithIdentity(jobKey));
+            qz.AddTrigger(opts =&gt; opts
+                .ForJob(jobKey)
+                .WithIdentity(tiggerKey)
+                .WithCronSchedule(schedule)
+            );
+
+            _logger.Debug("[{cron}] - PlanedPostsTask 注册成功", schedule);
+        }
+        catch (Exception ex)
+        {
+            _logger.Error(ex, "[{cron}] - PlanedPostsTask 注册失败", schedule);
+        }
+    }
 }</value>
     <comment>定时任务文件尾</comment>
   </data>
-  <data name="JobHeader" xml:space="preserve">
+  <data name="ScheduleHeader" xml:space="preserve">
     <value>using Quartz;
 using Quartz.AspNetCore;
 using XinjingdailyBot.Infrastructure;
